test/error/RealConst2.mod
MODULE RealConst2;

 CONST R = 1.E308; S* = R + R;

 PROCEDURE Go*; END Go;

END RealConst2.
